package com.example.s3d_sae_trello;

public interface Observateur {

    void actualiser(Sujet s);
}
