package com.example.s3d_sae_trello;

public class TriAlphabetique extends Tri{
    @Override
    public boolean hasNext() {
        return false;
    }

    @Override
    public Tache next() {
        return null;
    }
}
