package com.example.s3d_sae_trello;

public class VueGantt implements Observateur{
    @Override
    public void actualiser(Sujet s) {

    }
}
