package com.example.saetrello;

public class DiagrammeGantt extends ColonneLigne{

    public DiagrammeGantt(String s, int i) {
        super(s, i);
    }
}
