package com.example.saetrello;

public interface StrategyAffichage {
}
