package com.example.saetrello;

public class StrategyColonne implements StrategyAffichage{
}
