package com.example.saetrello;

import java.util.Iterator;

public abstract class Tri implements Iterator<Tache> {
}
